# src/main/java/com/example/shiftplanner_server/entities/Staff.java
@@ -5,7 +5,6 @@ import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
 
-import java.math.BigDecimal;
 import java.util.Objects;
 
 @Entity
@@ -22,12 +21,6 @@ public class Staff {
 
     @Column(name = "staff_name", nullable = false, length = 255)
     private String staffName;
-
-    @Column(name = "working_hours", nullable = false, precision = 5, scale = 2)
-    private BigDecimal workingHours;
-
-    @Column(name = "lunch_break", nullable = false, precision = 5, scale = 2)
-    private BigDecimal lunchBreak;
 
     @Column(name = "is_active", nullable = false)
     private boolean active;
